Fixed problem with home page not showing anything

--- a/src/App.css
+++ b/src/App.css
@@ -36,5 +36,8 @@ nav{
   text-align: center;
 }
 .home{
+  display: flex;
   justify-content: space-around;
+  text-align: center;
+  color: black;
 }
